--- a/static/css/main.css
+++ b/static/css/main.css
@@ -523,6 +523,10 @@
     font-size: 0.9rem;
     font-family: "Yeon Sung";
 }
+
+#detail_wrap #detail_box #detail_img ul li .attached_img_tag .attached_img_title {
+    font-family: "경기천년바탕";
+}
 .attached_ref_link span {
     margin-left: 10px;
 }
