--- a/static/css/main.css
+++ b/static/css/main.css
@@ -377,7 +377,7 @@
 }
 
 .detail_attachment_title {
-    text-align: center;
+    text-align: left;
 }
 
 #detail_wrap #detail_box #detail_img,
@@ -403,7 +403,7 @@
 #detail_wrap #detail_box #detail_img .img_title,
 #detail_wrap #detail_box #detail_work .work_title,
 #detail_wrap #detail_box #detail_ref .ref_title {
-    font-size: 2rem;
+    font-size: 1rem;
     /* font-weight: 600; */
 }
 
