--- a/static/css/main.css
+++ b/static/css/main.css
@@ -530,7 +530,7 @@
 .attached_ref_link span {
     margin-left: 10px;
 }
-.attached_ref_link span:hover {
+.attached_ref_link:hover {
     border-bottom: 1px solid #777;
 }
 
