--- a/static/css/main.css
+++ b/static/css/main.css
@@ -659,6 +659,7 @@
     box-shadow: none !important;
     border-radius: 0;
     border: 1px solid rgb(230,30,40);
+    background: transparent;
     /* background: url('https://cdd-ddc.org/static/img/index_bg_space_900.png') repeat; */
 
 }
@@ -884,5 +885,7 @@
 @media all and (max-width: 481px) {
     .mapboxgl-ctrl-top-right {
         right: 0 !important;
+        top: calc(100% - 240px) !important;
     }
+    
 }
