--- a/static/css/all.css
+++ b/static/css/all.css
@@ -78,7 +78,7 @@
 
 body {
     width: 100%;
-    position: relative;
+    /* position: relative; */
     font-size: 1.5rem;
     /* font-family: '또박또박', '경기천년바탕', 'Noto Serif SC', 'Noto Serif TC', sans-serif; */
     /* font-family: 'Yeon Sung', cursive; */
