--- a/static/css/main.css
+++ b/static/css/main.css
@@ -767,13 +767,23 @@
     left: calc(50% - 100px);
 } */
 #footer_wrap {
-    position: relative;
+    /* position: relative;
     text-align: center;
     max-width: 100%;
     width: 100%;
     padding: 15px;
     margin-top: 40px;
     font-size: 0.7rem;
+    color: rgb(230,30,40); */
+    text-align: center;
+    max-width: 100%;
+    width: 100%;
+    position: absolute;
+    padding: 15px;
+    margin-top: 40px;
+    font-size: 0.7rem;
+    bottom: 0;
+    left: 0;
     color: rgb(230,30,40);
 }
 
