--- a/static/css/main.css
+++ b/static/css/main.css
@@ -163,6 +163,7 @@
 #front_wrap {
     width: 100%;
     height: 100%;
+    min-height: 800px;
     z-index: 999;
 }
 
@@ -778,7 +779,7 @@
     text-align: center;
     max-width: 100%;
     width: 100%;
-    position: absolute;
+    position: relative;
     padding: 15px;
     margin-top: 40px;
     font-size: 0.7rem;
