--- a/static/css/main.css
+++ b/static/css/main.css
@@ -8,7 +8,10 @@
       background: black;
     }
   }
-
+  
+  section {
+      background: url('https://cdd-ddc.org/static/img/index_bg_space_900.png') repeat;
+  }
 /****front****/
 #index_body {
     cursor: pointer;
