--- a/static/css/main.css
+++ b/static/css/main.css
@@ -9,9 +9,9 @@
     }
   }
   
-  #detail_sc {
+  /* #detail_sc {
       background: url('https://cdd-ddc.org/static/img/index_bg_space_900.png') repeat;
-  }
+  } */
 /****front****/
 #index_body {
     cursor: pointer;
