--- a/static/css/main.css
+++ b/static/css/main.css
@@ -69,7 +69,8 @@
     cursor: pointer; */
     position: relative;
     /* top: 50px; */
-    top: 160px;
+    /* top: 160px; */
+    top: 300px;
     left: 120px;
     width: 320px;
     height: 40px;
@@ -826,7 +827,8 @@
     .front_msg {
         width: 180px;
         /* top: -20px; */
-        top: 65px;
+        /* top: 65px; */
+        top: 180px;
         left: 145px;
     }
 
