--- a/static/css/main.css
+++ b/static/css/main.css
@@ -829,7 +829,8 @@
         /* top: -20px; */
         /* top: 65px; */
         top: 180px;
-        left: 145px;
+        /* left: 145px; */
+        left: 40%;
     }
 
     .cheon {
